spacing fix

--- a/css/projectCard.css
+++ b/css/projectCard.css
@@ -72,9 +72,26 @@
     transition: height 0.5s ease;
 }
 
+.projectCard-Row
+{
+    margin-top: 1% !important;
+}
+
 .projectCard-LinkButton
 {
     margin-left: 1%;
+}
+
+@media (max-width: 991.98px) 
+{
+    .projectCard
+    {
+        margin-top: 1%;
+    }
+    .projectCard-Row
+    {
+        margin-top: 0 !important;
+    }
 }
 
 @media (max-width: 575.98px) { 
